src/src/objects/EM_Day__c.object
<CustomObject>
    <fields>
        <fullName>EM_No_of_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EM_Time_Sheet__c</fullName>
        <label>Time Sheet</label>
        <referenceTo>EM_Time_Sheet__c</referenceTo>
        <relationshipLabel>Days</relationshipLabel>
        <relationshipName>Days</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EM_Week_Day__c</fullName>
        <label>Week Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUN</fullName>
                    <default>true</default>
                    <label>SUN</label>
                </value>
                <value>
                    <fullName>MON</fullName>
                </value>
                <value>
                    <fullName>TUE</fullName>
                </value>
                <value>
                    <fullName>WED</fullName>
                </value>
                <value>
                    <fullName>THUR</fullName>
                </value>
                <value>
                    <fullName>FRI</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Day</label>
    <nameField>
        <displayFormat>Day-{0000}</displayFormat>
        <label>Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>